# pyproject.toml
# Setuptools is moving toward using pyproject.toml as specified in PEP 621.

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsx"
version = "0.9.10dev"
description = "The utilities pack for data science and analytics tasks."
license = {file = "BSD 3-Clause License"}
readme = "README.md"
authors = [{ name = "NicTsyen", email = "nic.tsyen@outlook.com" }]


classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["pandas", "utility"]
dependencies = ['joblib', 'seaborn', 'pandas', 'numpy', 'scipy', 'matplotlib', 'regex']
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["shutil", "xlsxwriter", "openpyxl"]

[project.urls]
homepage='https://github.com/NicTsyen/dsx'
documentation ='https://dataninja.ml/data-analytics/dsx'
repository = "https://github.com/NicTsyen/dsx"
#changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"



[tool.setuptools]
packages = ["dsx"]

#[tool.setuptools.packages.find]
#where = ["dsx"]  # list of folders that contain the packages (["."] by default)
# include = ["my_package*"]  # package names should match these glob patterns (["*"] by default)
# exclude = ["my_package.tests*"]  # exclude packages matching these glob patterns (empty by default)
#namespaces = false  # to disable scanning PEP 420 namespaces (true by default)




[project.scripts]
add_toc = "dsx.add_toc.__main__:main"
